--- a/Pinochle-Scoring-App/Pinochle-Scoring-App/WinnerPage.xaml
+++ b/Pinochle-Scoring-App/Pinochle-Scoring-App/WinnerPage.xaml
@@ -17,6 +17,7 @@
             Margin="0,10,0,0"/>
         <Button Text="Start New Game" 
                 Clicked="OnStartNewGameButtonClicked"
-                Margin="0,30,0,0"/>
+                Margin="0,30,0,0"
+                BackgroundColor="#193829"/>
     </VerticalStackLayout>
 </ContentPage>
